--- a/engine/pre-alpha/20 (material tab)/index.html
+++ b/engine/pre-alpha/20 (material tab)/index.html
@@ -1227,8 +1227,8 @@
 				//	Initialize watchValue.
 					watch( entity_droplist, "onchange", function( property, event, id ){
 					//	debugMode && console.log({item:"droplist",event:event,"value":id});
-						watchValue.button = increase_x; watchValue.key = vector_droplist.value;
-						watchValue.value = editor[vector_droplist.value].x; watchValue.entity = id; 
+					//	watchValue.button = increase_x; watchValue.key = vector_droplist.value;
+					//	watchValue.value = editor[vector_droplist.value].x; watchValue.entity = id; 
 					});
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1354,8 +1354,8 @@
 				//	Initialize watchValue.
 					watch( entity_droplist, "onchange", function( property, event, id ){
 					//	debugMode && console.log({item:"droplist",event:event,"value":id});
-						watchValue.button = increase_y; watchValue.key = vector_droplist.value;
-						watchValue.value = editor[vector_droplist.value].y; watchValue.entity = id; 
+					//	watchValue.button = increase_y; watchValue.key = vector_droplist.value;
+					//	watchValue.value = editor[vector_droplist.value].y; watchValue.entity = id; 
 					});
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1489,8 +1489,8 @@
 				//	Initialize watchValue.
 					watch( entity_droplist, "onchange", function( property, event, id ){
 					//	debugMode && console.log({item:"droplist",event:event,"value":id});
-						watchValue.button = increase_r; watchValue.key = color_droplist.value;
-						watchValue.value = editor[color_droplist.value].r; watchValue.entity = id; 
+					//	watchValue.button = increase_r; watchValue.key = color_droplist.value;
+					//	watchValue.value = editor[color_droplist.value].r; watchValue.entity = id; 
 					});
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1615,8 +1615,8 @@
 				//	Initialize watchValue.
 					watch( entity_droplist, "onchange", function( property, event, id ){
 					//	debugMode && console.log({item:"droplist",event:event,"value":id});
-						watchValue.button = increase_g; watchValue.key = color_droplist.value;
-						watchValue.value = editor[color_droplist.value].g; watchValue.entity = id; 
+					//	watchValue.button = increase_g; watchValue.key = color_droplist.value;
+					//	watchValue.value = editor[color_droplist.value].g; watchValue.entity = id; 
 					});
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1741,8 +1741,8 @@
 				//	Initialize watchValue.
 					watch( entity_droplist, "onchange", function( property, event, id ){
 					//	debugMode && console.log({item:"droplist",event:event,"value":id});
-						watchValue.button = increase_b; watchValue.key = color_droplist.value;
-						watchValue.value = editor[color_droplist.value].b; watchValue.entity = id; 
+					//	watchValue.button = increase_b; watchValue.key = color_droplist.value;
+					//	watchValue.value = editor[color_droplist.value].b; watchValue.entity = id; 
 					});
 
 				//	Will trigger when clicking has finished (and value has changed).
