--- a/engine/pre-alpha/20 (material tab)/index.html
+++ b/engine/pre-alpha/20 (material tab)/index.html
@@ -240,7 +240,7 @@
 						keys += "wireframe,wireframeLinecap,wireframeLinejoin,wireframeLinewidth,";
 						keys += "skinning,morphTargets,morphNormals,combine,shininess,";
 						keys += "depthPacking,scale,gapSize,linecap,linejoin,linewidth,";
-						keys += "dashSize,size,rotation,sizeAttenuation";
+						keys += "dashSize,size,rotation,sizeAttenuation,needsUpdate";
 
 						keys.split(",").forEach(function( key ){
 							switch ( key ){
